--- a/style.css
+++ b/style.css
@@ -39,21 +39,20 @@ canvas {
   position: absolute;
   bottom: 0;
   right: 50%;
-  transform: translate(50%, 0);
   animation: bounce 2.5s ease-in-out infinite;
 }
 
 @keyframes bounce {
   0% {
-    transform: translateY(0);
+    transform: translate(50%, 0);
   }
 
   50% {
-    transform: translateY(-30px);
+    transform: translate(50%, -30px);
   }
 
   100% {
-    transform: translateY(0);
+    transform: translate(50%, 0);
   }
 
 }
